--- a/rnoaa_ISD_demo.Rmd
+++ b/rnoaa_ISD_demo.Rmd
@@ -5,19 +5,21 @@ output: html_notebook
 
 RNOAA R test for the ISD/DS3505 Datasets
 
+Pardon the typos; they are legion.
+
 To begin with we will use the "rnoaa" library.
 
 It is also handy to have the "lubridate" library to manage the time coordinate data.  
 
-ISD Parsing is dfone with the "isdparser"
+ISD Parsing is sone with the "isdparser"
 
 You will need to install all three
 
-I also included "openair" for wind roses
+I also included  the "openair" library for wind roses
 
 Something to be aware of before we start.  
 
-These are an merger of several report message types.  Most are derived for use at airports. The data archiving is designed to house any of the messages in one single record.
+These are an merger of several report message types, METARs (Hourlies), SPECIs (special reports that supplement the METARs), and 3-hrly but more comprehensive SYNOPs.  Most are derived for use at airports and thus have more than one cloud field (low, middle and high). The data archiving is designed to house any of the messages in one single record.
 
 For some fields like temperature, pressure, humidity and wind speed, this isn't too much of a problem.  But for other fields like cloud and precip and significant weather that will vary with the type of report message.
 
@@ -32,14 +34,14 @@ To target a given station location you will need two catalog codes
 
 The USAF Code and the WBAN code.
 
-If you didn't work in the old Asheville Federal Building in the 80s before them moved and don't know what file cabinet to use there is hope.
+If you didn't work in the old Asheville Federal Building in the 80s before they moved and don't know what file cabinet the station history info is kept, there is hope.
 
 If you have the latitude and longitude and radius in KM you can pull those fields from  using the isd_station_search function.
 
 ```{r}
-stations_near_KRAP = isd_stations_search(lat=44,      # degrees_north
-                                         lon=-103,    # degrees_east
-                                         radius=100)  # km
+stations_near_KRAP = isd_stations_search(lat    =   44,  # degrees_north
+                                         lon    = -103,  # degrees_east
+                                         radius =  100)  # km
 
 print(stations_near_KRAP)
 ```
@@ -65,7 +67,7 @@ output_file_name = paste("KRAP",
 
 To extract the data (and this can take a few minutes since you are digging on the NOAA servers...) 
 
-use the isd command following this example.  The orignal data is kept in a compressed "tarball" with one tarball per year.
+use the isd command following this example.  The original data is kept in a compressed "tarball" with one tarball per year.
 
 This also has the option for multiprocessing but you probably don't need it.
 
@@ -120,12 +122,12 @@ KRAP_data$wind_direction[KRAP_data$wind_direction == "999"]             = NA
 
 Some of these fields, but not all, are managed with the isd_transform() function with respect to scaling
 
-temp/dewpoint (deg C) converted from 10ths of degree
+temp/dew point (deg C) converted from 10ths of degree
 mean sea level pressure (hPa) converted from 10ths of hPa
 wind speed     (m s-1) converted from 10ths of m s-1
 wind direction (compass decimal degrees) 
 
-Precip is also processed but this data set is an amalgum of both hourly, 3-hrly, 6-hrly, 12-hrly, 24-hrly data depending on the report message that's being archived and I am not sure you will want that, especially if you can get Hourly Precip Data from another source
+Precip is also processed but this data set is an merger of both hourly, 3-hrly, 6-hrly, 12-hrly, 24-hrly data depending on the report message that's being archived and I am not sure you will want that, especially if you can get Hourly Precip Data from another source
 
 ```{r}
 
@@ -142,7 +144,7 @@ KRAP_data$wind_direction[KRAP_data$wind_speed == 0]             = 0
 
 Cloud Cover is held in several positions in the dataset.  Once again this is because the data is designed for use for aerodrome use.  
 
-I am setting it up to give you the "GF1 group" which is the total cloud cover for all flight levels.  These fields are often archived in "octaves" or eights and I'll be converting them to fractions for you.  IN cases of "obscured sky" caused by fog or smoke, I will label it 100% for total obscuration or 50% covered for partial obscuration.    
+I am setting it up to give you the "GF1 group" which is the total cloud cover for all flight levels.  These fields are often archived in "octaves" or eights and I'll be converting them to fractions for you.  IN cases of "obscured sky" caused by fog or smoke, I will label it 100% for total obscured sky or 50% covered for partial obscured skies.    
 
 
 ```{r}
@@ -237,7 +239,7 @@ KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fractio
 ```
 
 
-And to plot everthing out...
+And to plot everything out...
 
 Temperature
 
@@ -359,7 +361,7 @@ windRose(mydata     = windrose_frame,
 
 ```
 
-Finally let's put everything into a single time frame since we have observations at several times.  We can interopolate the data to the nearest hour.
+Finally let's put everything into a single time frame since we have observations at several times.  We can interpolate the data to the nearest hour.
 
 We do this by first creating a regularly spaced time vector
 
@@ -426,7 +428,7 @@ KRAP_time_series$wind_dir_degrees  = approx(x     = KRAP_data$date_time,
 print(KRAP_time_series)
 ```
 
-And send it to an ascii file
+And send it to an ASCII file
 
 ```{r}
 
