Small Edits to make code more generalized

--- a/rnoaa_ISD_demo.Rmd
+++ b/rnoaa_ISD_demo.Rmd
@@ -39,27 +39,27 @@ If you didn't work in the old Asheville Federal Building in the 80s before they 
 If you have the latitude and longitude and radius in KM you can pull those fields from  using the isd_station_search function.
 
 ```{r}
-stations_near_KRAP = isd_stations_search(lat    =   44,  # degrees_north
-                                         lon    = -103,  # degrees_east
-                                         radius =  100)  # km
+stations_near_target = isd_stations_search(lat    =   44,  # degrees_north
+                                           lon    = -103,  # degrees_east
+                                           radius =  100)  # km
 
-print(stations_near_KRAP)
+print(stations_near_target)
 ```
 
-So for Rapid City Regional Airport (KRAP) which probably has the best reporting fidelity since it's a First Order Station for NOAA, and for your period, you will want to use the following stationID pair.
+So for Rapid City Regional Airport (KRAP) which probably has the best reporting fidelity in this example's region since it's a First Order Station for NOAA, and for your period, you will want to use the following stationID pair.
 
 I am not sure as to the quality or reliability of Elsworth (KRCA), Custer (KCUT) or Spearfish (KSPF) since they are not affiliated with an NWS office.
 
 ```{r}
-krap_usaf = 726620
-krap_wban =  24090
-krap_year =   2010
+target_usaf = 726620
+target_wban =  24090
+target_year =   2010
 
 station_name_label = paste("Rapid City", 
-                           krap_year)
+                           target_year)
 
 output_file_name = paste("KRAP",
-                         krap_year,
+                         target_year,
                          ".csv",
                          sep="")
 
@@ -72,12 +72,12 @@ use the isd command following this example.  The original data is kept in a comp
 This also has the option for multiprocessing but you probably don't need it.
 
 ```{r}
-KRAP_data = isd(usaf = krap_usaf,  # your usaf number
-                wban = krap_wban,  # your wban number
-                year = krap_year,  # your year
-                progress=TRUE)     # shows prograss as you go
+NCDC_data = isd(usaf = target_usaf,  # your usaf number
+                wban = target_wban,  # your wban number
+                year = target_year,  # your year
+                progress=TRUE)       # shows prograss as you go
 
-print(KRAP_data)
+print(NCDC_data)
 
 ```
 
@@ -88,11 +88,11 @@ You will want to fix the date.  In the ISD format it is split between calendar d
 This can be done with the lubridate function ymd_hm()
 
 ```{r}
-KRAP_data$date_time = ymd_hm(sprintf("%s %s",
-                                      as.character(KRAP_data$date),
-                                      KRAP_data$time))
+NCDC_data$date_time = ymd_hm(sprintf("%s %s",
+                                      as.character(NCDC_data$date),
+                                      NCDC_data$time))
 
-KRAP_data$date = KRAP_data$date_time 
+NCDC_data$date = NCDC_data$date_time 
 
 ```
 
@@ -105,15 +105,15 @@ Missing fields are typically ID'ed as 9999 in the original data
 ```{r}
 
 
-KRAP_data$temperature[KRAP_data$temperature == "+9999"]                   = NA 
+NCDC_data$temperature[NCDC_data$temperature == "+9999"]                   = NA 
 
-KRAP_data$temperature_dewpoint[KRAP_data$temperature_dewpoint == "+9999"] = NA
+NCDC_data$temperature_dewpoint[NCDC_data$temperature_dewpoint == "+9999"] = NA
 
-KRAP_data$air_pressure[KRAP_data$air_pressure == "99999"]                 = NA
+NCDC_data$air_pressure[NCDC_data$air_pressure == "99999"]                 = NA
 
-KRAP_data$wind_speed[KRAP_data$wind_speed == "9999"]                     = NA
+NCDC_data$wind_speed[NCDC_data$wind_speed == "9999"]                      = NA
 
-KRAP_data$wind_direction[KRAP_data$wind_direction == "999"]             = NA
+NCDC_data$wind_direction[NCDC_data$wind_direction == "999"]               = NA
 
 
 
@@ -131,11 +131,11 @@ Precip is also processed but this data set is an merger of both hourly, 3-hrly, 
 
 ```{r}
 
-KRAP_data = isd_transform(KRAP_data)
+NCDC_data = isd_transform(NCDC_data)
 
 # patch the wind direction so it's 0 degrees when the wind speed is missing
 
-KRAP_data$wind_direction[KRAP_data$wind_speed == 0]             = 0
+NCDC_data$wind_direction[NCDC_data$wind_speed == 0] = 0
 
 
 ```
@@ -149,91 +149,91 @@ I am setting it up to give you the "GF1 group" which is the total cloud cover fo
 
 ```{r}
 
-KRAP_data$GF1_total_cloud_cover_fraction = as.numeric(KRAP_data$GF1_coverage)
+NCDC_data$GF1_total_cloud_cover_fraction = as.numeric(NCDC_data$GF1_coverage)
 
 # 00: None, SKC or CLR
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==00] = 0.00
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==00] = 0.00
 
 # 01: One okta - 1/10 or less but not zero
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==01] = 1.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==01] = 1.0 / 8.0
 
 # 02: Two oktas - 2/10 ‑ 3/10, or FEW
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==02] = 2.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==02] = 2.0 / 8.0
 
 # 03: Three oktas - 4/10
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==03] = 3.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==03] = 3.0 / 8.0
 
 # 04: Four oktas - 5/10, or SCT
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==04] = 4.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==04] = 4.0 / 8.0
 
 # 05: Five oktas - 6/10
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==05] = 5.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==05] = 5.0 / 8.0
 
 # 06: Six oktas - 7/10 ‑ 8/10
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==06] = 6.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==06] = 6.0 / 8.0
 
 # 07: Seven oktas - 9/10 or more but not 10/10, or BKN
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==07] = 7.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==07] = 7.0 / 8.0
 
 # 08: Eight oktas - 10/10, or OVC
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==08] = 8.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==08] = 8.0 / 8.0
 
 # 09: Sky obscured, or cloud amount cannot be estimated
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==09] = 8.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==09] = 8.0 / 8.0
 
 # 10: Partial obscuration
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==10] = 4.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==10] = 4.0 / 8.0
 
 # 11: Thin scattered
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==11] = 2.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==11] = 2.0 / 8.0
 
 # 12: Scattered
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==12] = 4.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==12] = 4.0 / 8.0
 
 # 13: Dark scattered
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==13] = 5.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==13] = 5.0 / 8.0
 
 # 14: Thin broken
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==14] = 6.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==14] = 6.0 / 8.0
 
 # 15: Broken
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==15] = 7.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==15] = 7.0 / 8.0
 
 # 16: Dark broken
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==16] = 8.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==16] = 8.0 / 8.0
 
 # 17: Thin overcast
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==17] = 4.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==17] = 4.0 / 8.0
 
 # 18: Overcast
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==18] = 8.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==18] = 8.0 / 8.0
 
 # 19: Dark overcast
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==19] = 8.0 / 8.0
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==19] = 8.0 / 8.0
 
 # 99: Missing
 
-KRAP_data$GF1_total_cloud_cover_fraction[KRAP_data$GF1_total_cloud_cover_fraction==99] = NA
+NCDC_data$GF1_total_cloud_cover_fraction[NCDC_data$GF1_total_cloud_cover_fraction==99] = NA
 
 
 ```
@@ -245,8 +245,8 @@ Temperature
 
 ```{r}
 
-plot(x       = KRAP_data$date_time,
-     y       = KRAP_data$temperature, 
+plot(x       = NCDC_data$date_time,
+     y       = NCDC_data$temperature, 
      type    = "l", 
      col     = "red", 
      lwd     = 1.5, 
@@ -263,8 +263,8 @@ Dew Point
 ```{r}
 
 
-plot(x       = KRAP_data$date_time,
-     y       = KRAP_data$temperature_dewpoint, 
+plot(x       = NCDC_data$date_time,
+     y       = NCDC_data$temperature_dewpoint, 
      type    = "l", 
      col     = "darkgreen", 
      lwd     = 1.5, 
@@ -279,8 +279,8 @@ Cloud Fraction
 ```{r}
 
 
-plot(x       = KRAP_data$date_time,
-     y       = KRAP_data$GF1_total_cloud_cover_fraction, 
+plot(x       = NCDC_data$date_time,
+     y       = NCDC_data$GF1_total_cloud_cover_fraction, 
      type    = "l", 
      col     = "grey", 
      lwd     = 1.5, 
@@ -299,8 +299,8 @@ Pressure
 ```{r}
 
 
-plot(x       = KRAP_data$date_time,
-     y       = KRAP_data$air_pressure, 
+plot(x       = NCDC_data$date_time,
+     y       = NCDC_data$air_pressure, 
      type    = "l", 
      col     = "blue", 
      lwd     = 1.5, 
@@ -318,8 +318,8 @@ Wind Speed
 ```{r}
 
 
-plot(x       = KRAP_data$date_time,
-     y       = KRAP_data$wind_speed, 
+plot(x       = NCDC_data$date_time,
+     y       = NCDC_data$wind_speed, 
      type    = "l", 
      col     = "darkblue", 
      lwd     = 1.5, 
@@ -335,11 +335,11 @@ Wind Rose
 
 ```{r}
 
-windrose_frame = data.frame(date      = KRAP_data$date_time,
-                            ws        = KRAP_data$wind_speed,
-                            wd        = KRAP_data$wind_direction,
-                            longitude = KRAP_data$longitude,
-                            latitude  = KRAP_data$latitude)
+windrose_frame = data.frame(date      = NCDC_data$date_time,
+                            ws        = NCDC_data$wind_speed,
+                            wd        = NCDC_data$wind_direction,
+                            longitude = NCDC_data$longitude,
+                            latitude  = NCDC_data$latitude)
 
 
 
@@ -368,12 +368,12 @@ We do this by first creating a regularly spaced time vector
 
 ```{r}
 
-start_date = as.POSIXct(paste(krap_year,
+start_date = as.POSIXct(paste(target_year,
                               "-01-01 00:00:00 UTC",
                               sep=""),
                         tz = "UTC")
 
-end_date   = as.POSIXct(paste(krap_year,
+end_date   = as.POSIXct(paste(target_year,
                               "-12-31 00:00:00 UTC",
                               sep=""),
                         tz = "UTC")
@@ -391,49 +391,47 @@ We then interpolate between the various fields and frame them...
 
 ```{r}
 
-KRAP_time_series                  = data.frame(date = hour_time)
+NCDC_time_series                  = data.frame(date = hour_time)
 
-KRAP_time_series$temperature_degC = approx(x      = KRAP_data$date_time,
-                                           y      = KRAP_data$temperature,
+NCDC_time_series$temperature_degC = approx(x      = NCDC_data$date_time,
+                                           y      = NCDC_data$temperature,
                                            method = "linear",
                                            xout   = hour_time)$y
                               
-KRAP_time_series$dewpoint_degC    = approx(x      = KRAP_data$date_time,
-                                           y      = KRAP_data$temperature_dewpoint,
+NCDC_time_series$dewpoint_degC    = approx(x      = NCDC_data$date_time,
+                                           y      = NCDC_data$temperature_dewpoint,
                                            method = "linear",
                                            xout   = hour_time)$y 
                               
-KRAP_time_series$cloud_fraction   = approx(x      = KRAP_data$date_time,
-                                           y      = KRAP_data$GF1_total_cloud_cover_fraction,
+NCDC_time_series$cloud_fraction   = approx(x      = NCDC_data$date_time,
+                                           y      = NCDC_data$GF1_total_cloud_cover_fraction,
                                            method = "linear",
                                            xout   = hour_time)$y 
                               
-KRAP_time_series$press_msl_hPa    = approx(x      = KRAP_data$date_time,
-                                           y      = KRAP_data$air_pressure,
+NCDC_time_series$press_msl_hPa    = approx(x      = NCDC_data$date_time,
+                                           y      = NCDC_data$air_pressure,
                                            method = "linear",
                                            xout   = hour_time)$y
                               
-KRAP_time_series$wind_spd_ms      = approx(x      = KRAP_data$date_time,
-                                           y      = KRAP_data$wind_speed,
+NCDC_time_series$wind_spd_ms      = approx(x      = NCDC_data$date_time,
+                                           y      = NCDC_data$wind_speed,
                                            method = "linear",
                                            xout   = hour_time)$y
                               
-KRAP_time_series$wind_dir_degrees  = approx(x     = KRAP_data$date_time,
-                                           y      = KRAP_data$wind_direction,
+NCDC_time_series$wind_dir_degrees  = approx(x     = NCDC_data$date_time,
+                                           y      = NCDC_data$wind_direction,
                                            method = "linear",
                                            xout   = hour_time)$y
 
-
-
-print(KRAP_time_series)
+print(NCDC_time_series)
 ```
 
-And send it to an ASCII file
+And send it to a comma delimited ASCII file
 
 ```{r}
 
 
-write.table(x    = KRAP_time_series, 
+write.table(x    = NCDC_time_series, 
             file = output_file_name, 
             sep  =", ",
             row.names = FALSE)
